# Finetune

./: .gitignore  README.md  create_dataset.py  modify_dataset.py  pyproject.toml  train.py  train_config.yaml
yolo_finetune_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
